human_written_tests/WebAssembly/processed_control_flow_validation/test_block_23.wast
(assert_invalid
  (module (func $type-value-empty-vs-i64 (result i64)
    (block (result i64))
  ))
  "type mismatch"
)